dmm-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: "dmm-deployment"
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: "dmm"
    spec:
      containers:
      - image: davidmunoz4185/nginx:1.0.0
        imagePullPolicy: Always
        name: "dmm"
        ports:
        - containerPort: 80
