dmm-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "dmm-ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: dmm-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "service-dmm"
              servicePort: 80
